[tool.poetry]
name = "noizze_crawler"
version = "0.1.0"
description = ""
authors = ["YUChoe@7577 <yonguk.choe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.8"
pytest = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
